Fix uneven select screen search bar sizes

--- a/css/spni.css
+++ b/css/spni.css
@@ -2599,6 +2599,7 @@ ul.dropdown-menu>li {
     margin: 0;
 
     flex: 2;
+    min-width: 0;
 }
 
 .column-component {
